spotify widegets created

--- a/src/main/resources/templates/music.html
+++ b/src/main/resources/templates/music.html
@@ -64,209 +64,17 @@
 <section>
     <div class="container">
         <div class="row">
-            <div class="col-sm-4 mt-5">
-                <div class="albumCard d-flex justify-content-center">
-                    <div class="card" style="width: 20rem; height: 45rem">
-                        <img class="card-img-top" th:src="@{/dontworry/Zerktronic-Album-coverDontWorry_080720.jpg}"
-                             alt="Dont worry cover album">
-                        <div class="albumInfo">
-                            <h3 class="card-title albumName d-flex justify-content-center">Don't Worry</h3>
-                            <h4 class="card-text artist d-flex justify-content-center">Zerktronic</h4>
-                            <h5 class="year d-flex justify-content-center">2020</h5>
-                        </div>
-                        <div>
-
-                        </div>
-                        <ul class="list-group list-group-flush scrollable">
-                            <li class="list-group-item ">
-                                <div class="trackTitle d-flex justify-content-center">
-                                    <h5>Crying Again</h5>
-                                </div>
-                                <audio class="audioControl" controls>
-                                    <source th:src="@{/dontworry/Crying-Again.wav}" type="audio/wav">
-                                    Your browser does not support the audio element.
-                                </audio>
-                            </li>
-                            <li class="list-group-item">
-                                <div class="trackTitle d-flex justify-content-center">
-                                    <h5>Did they forget you</h5>
-                                </div>
-                                <audio class="audioControl" controls>
-                                    <source th:src="@{/dontworry/did-they-forget-you.wav}" type="audio/wav">
-                                    Your browser does not support the audio element.
-                                </audio>
-                            </li>
-                            <li class="list-group-item">
-                                <div class="trackTitle d-flex justify-content-center">
-                                    <h5>Duce, I'm Out</h5>
-                                </div>
-                                <audio class="audioControl" controls controlsList="nodownload">
-                                    <source th:src="@{/dontworry/Duce-Im-out.wav}" type="audio/wav">
-                                    Your browser does not support the audio element.
-                                </audio>
-                            </li>
-                            <li class="list-group-item">
-                                <div class="trackTitle d-flex justify-content-center">
-                                    <h5>LALA In My Mind</h5>
-                                </div>
-                                <audio class="audioControl" controls controlsList="nodownload">
-                                    <source th:src="@{/dontworry/LALA-in-my-mind.wav}" type="audio/wav">
-                                    Your browser does not support the audio element.
-                                </audio>
-                            </li>
-                            <li class="list-group-item">
-                                <div class="trackTitle d-flex justify-content-center">
-                                    <h5>Latebut still here</h5>
-                                </div>
-                                <audio class="audioControl" controls controlsList="nodownload">
-                                    <source th:src="@{/dontworry/Late-but-still-here.wav}" type="audio/wav">
-                                    Your browser does not support the audio element.
-                                </audio>
-                            </li>
-                        </ul>
-                        <div class="card-body mediaLinks d-flex justify-content-center">
-                            <a class="btn spotifyLink" href="#">
-                                <i class="fab fa-spotify fa-3x"></i>
-                            </a>
-                            <a class="btn spotifyLink" href="#">
-                                <i class="fab fa-apple fa-3x"></i>
-                            </a>
-                            <a class="btn spotifyLink" href="#">
-                                <i class="fab fa-youtube fa-3x"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
+            <div class="col-6 text-center mt-5">
+            <iframe src="https://open.spotify.com/embed/album/5dOi6L7oNgZEe7G05EKHA9" width="400" height="480" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
             </div>
-            <div class="col-sm-4 mt-5">
-                <div class="albumCard d-flex justify-content-center">
-                    <div class="card" style="width: 20rem; height: 45rem">
-                        <img class="card-img-top" th:src="@{/dirtydishes/DirtyDishez.jpg}"
-                             alt="Dont worry cover album">
-                        <div class="albumInfo">
-                            <h3 class="card-title albumName d-flex justify-content-center">Dirty Dishez</h3>
-                            <h4 class="card-text artist d-flex justify-content-center">Zerktronic</h4>
-                            <h5 class="year d-flex justify-content-center">2020</h5>
-                        </div>
-                        <div>
-
-                        </div>
-                        <ul class="list-group list-group-flush scrollable">
-                            <li class="list-group-item ">
-                                <div class="trackTitle d-flex justify-content-center">
-                                    <h5>Boogie</h5>
-                                </div>
-                                <audio class="audioControl" controls>
-                                    <source th:src="@{/dirtydishes/boogie.mp3}" type="audio/mpeg">
-                                    Your browser does not support the audio element.
-                                </audio>
-                            </li>
-                            <li class="list-group-item">
-                                <div class="trackTitle d-flex justify-content-center">
-                                    <h5>Mind</h5>
-                                </div>
-                                <audio class="audioControl" controls>
-                                    <source th:src="@{/dirtydishes/mind.mp3}" type="audio/mpeg">
-                                    Your browser does not support the audio element.
-                                </audio>
-                            </li>
-                            <li class="list-group-item">
-                                <div class="trackTitle d-flex justify-content-center">
-                                    <h5>Ohh Ohh</h5>
-                                </div>
-                                <audio class="audioControl" controls controlsList="nodownload">
-                                    <source th:src="@{/dirtydishes/ohh-ohh.mp3}" type="audio/mpeg">
-                                    Your browser does not support the audio element.
-                                </audio>
-                            </li>
-                            <li class="list-group-item">
-                                <div class="trackTitle d-flex justify-content-center">
-                                    <h5>San Anto Groove</h5>
-                                </div>
-                                <audio class="audioControl" controls controlsList="nodownload">
-                                    <source th:src="@{/dirtydishes/san-anto-groove.mp3}" type="audio/mpeg">
-                                    Your browser does not support the audio element.
-                                </audio>
-                            </li>
-                        </ul>
-                        <div class="card-body mediaLinks d-flex justify-content-center">
-                            <a class="btn spotifyLink" href="#">
-                                <i class="fab fa-spotify fa-3x"></i>
-                            </a>
-                            <a class="btn spotifyLink" href="#">
-                                <i class="fab fa-apple fa-3x"></i>
-                            </a>
-                            <a class="btn spotifyLink" href="#">
-                                <i class="fab fa-youtube fa-3x"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
+            <div class="col-6 text-center mt-5">
+            <iframe src="https://open.spotify.com/embed/album/4Vhgjt5Y7qxPaDermRF2AG" width="400" height="480" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
             </div>
-            <div class="col-sm-4 mt-5">
-                <div class="albumCard d-flex justify-content-center">
-                    <div class="card" style="width: 20rem; height: 45rem">
-                        <img class="card-img-top" th:src="@{/Brown-Boy-Funk/BrownBoyFunk-TapeCover.jpg}"
-                             alt="Dont worry cover album">
-                        <div class="albumInfo">
-                            <h3 class="card-title albumName d-flex justify-content-center">Brown Boy Funk</h3>
-                            <h4 class="card-text artist d-flex justify-content-center">Zerktronic</h4>
-                            <h5 class="year d-flex justify-content-center">2020</h5>
-                        </div>
-                        <div>
-
-                        </div>
-                        <ul class="list-group list-group-flush scrollable">
-                            <li class="list-group-item ">
-                                <div class="trackTitle d-flex justify-content-center">
-                                    <h5>Going Outside</h5>
-                                </div>
-                                <audio class="audioControl" controls>
-                                    <source th:src="@{/Brown-Boy-Funk/Goingoutside.wav}" type="audio/wav">
-                                    Your browser does not support the audio element.
-                                </audio>
-                            </li>
-                            <li class="list-group-item">
-                                <div class="trackTitle d-flex justify-content-center">
-                                    <h5>House Sippin</h5>
-                                </div>
-                                <audio class="audioControl" controls>
-                                    <source th:src="@{/Brown-Boy-Funk/House-Sippin.wav}" type="audio/wav">
-                                    Your browser does not support the audio element.
-                                </audio>
-                            </li>
-                            <li class="list-group-item">
-                                <div class="trackTitle d-flex justify-content-center">
-                                    <h5>Krookies</h5>
-                                </div>
-                                <audio class="audioControl" controls controlsList="nodownload">
-                                    <source th:src="@{/Brown-Boy-Funk/Krookies.wav}" type="audio/wav">
-                                    Your browser does not support the audio element.
-                                </audio>
-                            </li>
-                            <li class="list-group-item">
-                                <div class="trackTitle d-flex justify-content-center">
-                                    <h5>Lost 1.1</h5>
-                                </div>
-                                <audio class="audioControl" controls controlsList="nodownload">
-                                    <source th:src="@{/Brown-Boy-Funk/Lost-1-1.wav}" type="audio/wav">
-                                    Your browser does not support the audio element.
-                                </audio>
-                            </li>
-                        </ul>
-                        <div class="card-body mediaLinks d-flex justify-content-center">
-                            <a class="btn spotifyLink" href="#">
-                                <i class="fab fa-spotify fa-3x"></i>
-                            </a>
-                            <a class="btn spotifyLink" href="#">
-                                <i class="fab fa-apple fa-3x"></i>
-                            </a>
-                            <a class="btn spotifyLink" href="#">
-                                <i class="fab fa-youtube fa-3x"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
+            <div class="col-6 text-center mt-5">
+            <iframe src="https://open.spotify.com/embed/album/6J9L6Dke3fL1gJQjBsIyZq" width="400" height="480" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            </div>
+            <div class="col-6 text-center mt-5">
+            <iframe src="https://open.spotify.com/embed/album/53H9Cy29R8mKYNWE7QuhHg" width="400" height="480" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
             </div>
         </div>
     </div>
