--- a/src/main/resources/templates/art.html
+++ b/src/main/resources/templates/art.html
@@ -87,6 +87,7 @@
     <div class="pic-3">3</div>
     <div class="pic-4">4</div>
 </div>
+<h1><a th:text="${admin.username}"></a></h1>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
