--- a/src/main/resources/templates/art.html
+++ b/src/main/resources/templates/art.html
@@ -74,6 +74,11 @@
                     <li><a href="shop">$hop</a></li>
                     <li><a href="music">Music</a></li>
                     <li><a href="magazine">Magazine</a></li>
+                    <li>
+                        <form th:action="@{/logout}" th:method="post">
+                            <button class="btn-link btn" style="margin-top: 8px">Logout</button>
+                        </form>
+                    </li>
                 </ul>
             </nav>
         </div>
