--- a/src/main/resources/templates/art.html
+++ b/src/main/resources/templates/art.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thyme leaf.org/extras/spring-security" lang="en">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -93,11 +93,15 @@
     <div class="pic-4">4</div>
 </div>
 <!--<h1><a th:text="${#authentication.principal.username}"></a></h1>-->
-<h1><a th:if="${admin.id == 1}">
+<!--<h1><a th:if="${admin.id == 1}">-->
+<!--    Show if logged in-->
+<!--</a>-->
+<!--</h1>-->
+<div sec:authorize="isAuthenticated()">
+<h1>
     Show if logged in
-</a>
 </h1>
-
+</div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
