--- a/src/main/resources/templates/art.html
+++ b/src/main/resources/templates/art.html
@@ -102,6 +102,16 @@
     Show if logged in
 </h1>
 </div>
+<div class="imageForm">
+    <form th:action="@{art}" method="post" th:object="${images}" id="imageForm">
+        <div class="form-group">
+            <label for="image_Description"></label>
+            <input type="text" class="form-control" id="image_Description"
+                   placeholder="Enter a Description"
+                   th:field="*{images}">
+        </div>
+    </form>
+</div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
