--- a/src/main/resources/templates/art.html
+++ b/src/main/resources/templates/art.html
@@ -98,11 +98,7 @@
 <!--</a>-->
 <!--</h1>-->
 <div sec:authorize="isAuthenticated()">
-<h1>
-    Show if logged in
-</h1>
-</div>
-<div class="imageForm">
+    <div class="imageForm">
         <form th:action="@{/art}" method="POST"
 
               th:object="${image}" id="imageForm">
@@ -110,7 +106,7 @@
             <div class="form-group">
                 <label for="description"></label>
                 <input type="text" class="form-control" id="description"
-                       placeholder="Sign My Yearbook"
+                       placeholder="Enter Description"
                        th:field="*{description}">
             </div>
             <div class="container-fluid d-flex justify-content-center">
@@ -118,9 +114,16 @@
                 </button>
             </div>
         </form>
-
     </div>
 </div>
+<div class="" th:each="image : ${artImages}">
+    <div class="row no-gutters">
+        <div class="signerText col-8 mt-2">
+            <h3 class="Description"><a th:text="${image.description}"></a></h3>
+        </div>
+    </div>
+</div>
+
 <!--<form th:action="@{/art/create}" th:method="post" th:object="${test}">-->
 <!--    Description:-->
 <!--    <input th:field="*{description}" />-->
