--- a/src/main/resources/templates/art.html
+++ b/src/main/resources/templates/art.html
@@ -58,7 +58,7 @@
 
 
 </head>
-<body>
+<body><f></f>
 <script>
     window.addEventListener("load", function () {
         const loader = document.querySelector(".loader");
@@ -244,11 +244,13 @@
                 }
                 let blobData = new Blob([new Uint8Array(array)], {type: 'image/jpeg'})
                 console.log('Uploading to: ', response.uploadURL)
+                const imgloc = response.uploadURL.split('?');
+                console.log(imgloc[0]);
                 const result = await fetch(response.uploadURL, {
                     method: 'PUT',
                     body: blobData
                 })
-                console.log('Result: ', result)
+                console.log('Result: ' + result)
                 // Final URL for the user doesn't need the query string params
                 this.uploadURL = response.uploadURL.split('?')[0]
             }
