--- a/src/main/resources/templates/art.html
+++ b/src/main/resources/templates/art.html
@@ -123,6 +123,8 @@
             <label for="description">Description</label>
             <input type="text" th:field="*{description}" id="description" placeholder="Description">
             <span th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></span>
+            <input type="text" th:field="*{image}" id="image" >
+            <span th:if="${#fields.hasErrors('image')}" th:errors="*{image}"></span>
             <input type="submit" value="Add Post">
         </form>
     </div>
@@ -136,6 +138,7 @@
         <div class="signerText col-8 mt-2">
             <h3 class="Description">Description: <a th:text="${image.description}"></a></h3>
         </div>
+        <img width="851px" height="314px" th:src="${image.image}"/>
     </div>
 <div sec:authorize="isAuthenticated()">
 <!--    update-->
