--- a/src/main/resources/templates/art.html
+++ b/src/main/resources/templates/art.html
@@ -58,7 +58,8 @@
 
 
 </head>
-<body><f></f>
+<body>
+<f></f>
 <script>
     window.addEventListener("load", function () {
         const loader = document.querySelector(".loader");
@@ -160,26 +161,26 @@
 <!--</h1>-->
 <div sec:authorize="isAuthenticated()">
     <div class="imageForm">
-<!--        <form th:action="@{/art}" method="POST"-->
+        <!--        <form th:action="@{/art}" method="POST"-->
 
-<!--              th:object="${image}" id="imageForm">-->
+        <!--              th:object="${image}" id="imageForm">-->
 
-<!--            <div class="form-group">-->
-<!--                <label for="imageTitle"></label>-->
-<!--                <input type="text" class="form-control" id="imageTitle"-->
-<!--                       placeholder="Enter Title"-->
-<!--                       th:field="*{title}">-->
+        <!--            <div class="form-group">-->
+        <!--                <label for="imageTitle"></label>-->
+        <!--                <input type="text" class="form-control" id="imageTitle"-->
+        <!--                       placeholder="Enter Title"-->
+        <!--                       th:field="*{title}">-->
 
-<!--                <label for="imageDescription"></label>-->
-<!--                <input type="text" class="form-control" id="imageDescription"-->
-<!--                       placeholder="Enter Description"-->
-<!--                       th:field="*{description}">-->
-<!--            </div>-->
-<!--            <div class="container-fluid d-flex justify-content-center">-->
-<!--                <button class="btn-primary btn-lg" value="Submit" type="submit">Click here to submit-->
-<!--                </button>-->
-<!--            </div>-->
-<!--        </form>-->
+        <!--                <label for="imageDescription"></label>-->
+        <!--                <input type="text" class="form-control" id="imageDescription"-->
+        <!--                       placeholder="Enter Description"-->
+        <!--                       th:field="*{description}">-->
+        <!--            </div>-->
+        <!--            <div class="container-fluid d-flex justify-content-center">-->
+        <!--                <button class="btn-primary btn-lg" value="Submit" type="submit">Click here to submit-->
+        <!--                </button>-->
+        <!--            </div>-->
+        <!--        </form>-->
         <form action="#" th:action="@{/addpost}" th:object="${image}" method="post">
             <h1>Create new post</h1>
             <input type="hidden" th:field="*{id}"/>
@@ -189,7 +190,7 @@
             <label for="description">Description</label>
             <input type="text" th:field="*{description}" id="description" placeholder="Description">
             <span th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></span>
-            <input type="text" th:field="*{image}" id="image" >
+            <input type="text" th:field="*{image}" id="image">
             <span th:if="${#fields.hasErrors('image')}" th:errors="*{image}"></span>
             <input type="submit" value="Add Post">
         </form>
@@ -206,26 +207,28 @@
         </div>
         <img width="851px" height="314px" th:src="${image.image}"/>
     </div>
-<div sec:authorize="isAuthenticated()">
-<!--    update-->
-<!--    <form action="#"-->
-<!--            th:action="@{/update/{id}(id=${image.id})}"-->
-<!--            th:object="${image}"-->
-<!--            method="post">-->
 
-<!--        <label for="imageTitle">Title</label>-->
-<!--        <input type="text" th:field="*{title}" id="imageTitle" placeholder="Title">-->
-<!--        <span th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></span>-->
-<!--        <label for="ImageDescription">Description</label>-->
-<!--        <input type="text" th:field="*{description}" id="ImageDescription" placeholder="Description">-->
-<!--        <span th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></span>-->
-<!--        <input type="submit" value="Update Post">-->
+    <div sec:authorize="isAuthenticated()">
+        <!--    update-->
+        <!--    <form action="#"-->
+        <!--            th:action="@{/update/{id}(id=${image.id})}"-->
+        <!--            th:object="${image}"-->
+        <!--            method="post">-->
+
+        <!--        <label for="imageTitle">Title</label>-->
+        <!--        <input type="text" th:field="*{title}" id="imageTitle" placeholder="Title">-->
+        <!--        <span th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></span>-->
+        <!--        <label for="ImageDescription">Description</label>-->
+        <!--        <input type="text" th:field="*{description}" id="ImageDescription" placeholder="Description">-->
+        <!--        <span th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></span>-->
+        <!--        <input type="submit" value="Update Post">-->
 
 
-<!--    </form>-->
-<!--    delete-->
-    <a th:href="@{/edit/{id}(id=${image.id})}">Edit</a>
-    <a th:href="@{/delete/{id}(id=${image.id})}">Delete</a>
+        <!--    </form>-->
+        <!--    delete-->
+        <a th:href="@{/edit/{id}(id=${image.id})}">Edit</a>
+        <a th:href="@{/delete/{id}(id=${image.id})}">Delete</a>
+    </div>
 </div>
 
 <!--<form th:action="@{/art/create}" th:method="post" th:object="${test}">-->
@@ -311,6 +314,5 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
-</div>
 </body>
 </html>
