--- a/src/main/resources/templates/art.html
+++ b/src/main/resources/templates/art.html
@@ -16,11 +16,11 @@
     <script src="https://unpkg.com/vue"></script>
     <script src="https://unpkg.com/axios@0.2.1/dist/axios.min.js"></script>
     <style type="text/css">
-        body {
-            background: #20262E;
-            padding: 20px;
-            font-family: sans-serif;
-        }
+        /*body {*/
+        /*    background: #20262E;*/
+        /*    padding: 20px;*/
+        /*    font-family: sans-serif;*/
+        /*}*/
 
         #app {
             background: #fff;
@@ -30,30 +30,30 @@
             text-align: center;
         }
 
-        #logo {
-            width: 100px;
-        }
+        /*#logo {*/
+        /*    width: 100px;*/
+        /*}*/
 
-        h2 {
-            font-weight: bold;
-            margin-bottom: 15px;
-        }
+        /*h2 {*/
+        /*    font-weight: bold;*/
+        /*    margin-bottom: 15px;*/
+        /*}*/
 
-        h1, h2 {
-            font-weight: normal;
-            margin-bottom: 15px;
-        }
+        /*h1, h2 {*/
+        /*    font-weight: normal;*/
+        /*    margin-bottom: 15px;*/
+        /*}*/
 
-        a {
-            color: #42b983;
-        }
+        /*a {*/
+        /*    color: #42b983;*/
+        /*}*/
 
-        img {
-            width: 30%;
-            margin: auto;
-            display: block;
-            margin-bottom: 10px;
-        }
+        /*img {*/
+        /*    width: 30%;*/
+        /*    margin: auto;*/
+        /*    display: block;*/
+        /*    margin-bottom: 10px;*/
+        /*}*/
     </style>
 
 
