--- a/src/main/resources/templates/art.html
+++ b/src/main/resources/templates/art.html
@@ -143,12 +143,12 @@
 <div id="app">
     <h1>S3 Uploader Test</h1>
 
-    <div v-if="!img">
+    <div v-if="!image">
         <h2>Select an image</h2>
         <input type="file" @change="onFileChange">
     </div>
     <div v-else>
-        <img :src="img"/>
+        <img :src="image"/>
         <button v-if="!uploadURL" @click="removeImage">Remove image</button>
         <button v-if="!uploadURL" @click="uploadImage">Upload image</button>
     </div>
@@ -157,7 +157,6 @@
 
 <div sec:authorize="isAuthenticated()">
     <div class="imageForm">
-
         <form action="#" th:action="@{/addpost}" th:object="${image}" method="post">
             <h1>Create new post</h1>
             <input type="hidden" th:field="*{id}"/>
@@ -192,9 +191,6 @@
         <div class="signerText col-8 mt-2">
             <h3 class="Description">Description: <a th:text="${image.description}"></a></h3>
         </div>
-        <div class="signerText col-8 mt-2">
-            <h3><a th:text="${image.id}"></a></h3>
-        </div>
         <img width="851px" height="314px" th:src="${image.image}"/>
     </div>
 
@@ -204,7 +200,6 @@
         <!--            th:action="@{/update/{id}(id=${image.id})}"-->
         <!--            th:object="${image}"-->
         <!--            method="post">-->
-
 
         <!--        <label for="imageTitle">Title</label>-->
         <!--        <input type="text" th:field="*{title}" id="imageTitle" placeholder="Title">-->
@@ -222,12 +217,6 @@
     </div>
 </div>
 
-<!--<form th:action="@{/art/create}" th:method="post" th:object="${test}">-->
-<!--    Description:-->
-<!--    <input th:field="*{description}" />-->
-<!--    <br />-->
-<!--    <input type="submit" />-->
-<!--</form>-->
 <script>
     const MAX_IMAGE_SIZE = 1000000
 
