--- a/src/main/resources/templates/magazine.html
+++ b/src/main/resources/templates/magazine.html
@@ -21,12 +21,15 @@
 <!--            loader.className += " mobileHidden";-->
 <!--        })-->
 <!--    </script>-->
-    <script type="text/javascript" th:src="@{/js/catLoader.js}"></script>
     <script src="https://kit.fontawesome.com/4e791167da.js" crossorigin="anonymous"></script>
     <script>
         window.addEventListener("load", function () {
             const loader = document.querySelector(".loader");
             loader.className += " hidden";
+        })
+        window.addEventListener("load", function () {
+            const loader = document.querySelector(".mobileLoader");
+            loader.className += " mobileHidden";
         })
     </script>
 </head>
@@ -86,6 +89,7 @@
         </div>
     </div>
 </div>
+
 <div class="magazine">
     <iframe src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=u9q1w623f2" width="100%" height="700px"
             seamless="seamless" scrolling="no" frameBorder="0" allowFullScreen></iframe>
