--- a/src/main/resources/templates/music.html
+++ b/src/main/resources/templates/music.html
@@ -43,11 +43,12 @@
     </div>
 </section>
 <section>
-<!--    // desktop navbar-->
+    <!--    // desktop navbar-->
     <div class="d-none d-lg-block d-xl-block">
         <div class="navigation-bar navbar-dark bg-dark">
             <div id="navigation-container">
-                <a class="navbar-brand logo" href="/"><img th:src="@{/images/Gacho-icon-White.png}" title="Gacho icon black"
+                <a class="navbar-brand logo" href="/"><img th:src="@{/images/Gacho-icon-White.png}"
+                                                           title="Gacho icon black"
                                                            width="100px" height="100px"/></a>
                 <nav class="desktop-nav-links">
                     <ul>
@@ -61,26 +62,101 @@
         </div>
     </div>
 </section>
-<section>
-    <div class="container">
-        <div class="row">
-            <div class="col-6 text-center mt-5">
-            <iframe src="https://open.spotify.com/embed/album/5dOi6L7oNgZEe7G05EKHA9" width="400" height="480" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-            </div>
-            <div class="col-6 text-center mt-5">
-            <iframe src="https://open.spotify.com/embed/album/4Vhgjt5Y7qxPaDermRF2AG" width="400" height="480" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-            </div>
-            <div class="col-6 text-center mt-5">
-            <iframe src="https://open.spotify.com/embed/album/6J9L6Dke3fL1gJQjBsIyZq" width="400" height="480" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-            </div>
-            <div class="col-6 text-center mt-5">
-            <iframe src="https://open.spotify.com/embed/album/53H9Cy29R8mKYNWE7QuhHg" width="400" height="480" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+<section class="musicDesktop">
+    <div class="d-none d-lg-block d-xl-block">
+        <div class="container">
+            <div class="row">
+                <div class="col-6 text-center mt-5">
+                    <iframe src="https://open.spotify.com/embed/album/5dOi6L7oNgZEe7G05EKHA9" width="400" height="480"
+                            frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
+                <div class="col-6 text-center mt-5">
+                    <iframe src="https://open.spotify.com/embed/album/4Vhgjt5Y7qxPaDermRF2AG" width="400" height="480"
+                            frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
+                <div class="col-6 text-center mt-5">
+                    <iframe src="https://open.spotify.com/embed/album/6J9L6Dke3fL1gJQjBsIyZq" width="400" height="480"
+                            frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
+                <div class="col-6 text-center mt-5">
+                    <iframe src="https://open.spotify.com/embed/album/53H9Cy29R8mKYNWE7QuhHg" width="400" height="480"
+                            frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
             </div>
         </div>
     </div>
 </section>
+<section class="musicMobile">
+    <div class="d-block d-sm-block d-md-block d-lg-none">
+        <h2>Don't Worry</h2>
 
+        <!-- Trigger/Open The Modal -->
+
+        <img class="myBtn" th:src="@{/images/dontworrycover.png}" alt="Dont_worry_album_art"
+             style="width:100%;max-width:300px">
+
+        <!-- The Modal -->
+        <div id="myModal" class="modal">
+
+            <!-- Modal content -->
+                <span class="close">×</span>
+                <iframe src="https://open.spotify.com/embed/album/5dOi6L7oNgZEe7G05EKHA9" width="100%" height="480"
+                        frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+
+        </div>
+
+        <h2>Brown Boy Funk</h2>
+
+        <!-- Trigger/Open The Modal -->
+        <img class="myBtn" th:src="@{/images/brownboycover.jpg}" alt="Dont_worry_album_art"
+             style="width:100%;max-width:300px">
+
+        <!-- The Modal -->
+        <div id="myModal2" class="modal">
+
+            <!-- Modal content -->
+                <span class="close">×</span>
+                <iframe src="https://open.spotify.com/embed/album/4Vhgjt5Y7qxPaDermRF2AG" width="100%" height="480"
+                        frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+        </div>
+    </div>
+</section>
 </body>
+
+<script>
+    // Get the modal
+    var modal = document.getElementsByClassName('modal');
+
+    // Get the button that opens the modal
+    var btn = document.getElementsByClassName("myBtn");
+
+
+    // Get the <span> element that closes the modal
+    var span = document.getElementsByClassName("close");
+
+    // When the user clicks the button, open the modal
+    btn[0].onclick = function () {
+        modal[0].style.display = "block";
+    }
+
+    btn[1].onclick = function () {
+        modal[1].style.display = "block";
+    }
+    // When the user clicks on <span> (x), close the modal
+    span[0].onclick = function () {
+        modal[0].style.display = "none";
+    }
+
+    span[1].onclick = function () {
+        modal[1].style.display = "none";
+    }
+    // When the user clicks anywhere outside of the modal, close it
+    window.onclick = function (event) {
+        if (event.target == modal) {
+            modal.style.display = "none";
+        }
+    }
+</script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
