put margin on the top of the albums

--- a/src/main/resources/templates/music.html
+++ b/src/main/resources/templates/music.html
@@ -88,7 +88,7 @@
 </section>
 <section class="musicMobile">
     <div class="d-block d-sm-block d-md-block d-lg-none">
-        <div class="album1">
+        <div class="album1 mt-3">
             <div class="d-flex justify-content-center">
                 <h2>Don't Worry</h2>
             </div>
@@ -108,7 +108,7 @@
 
             </div>
         </div>
-        <div class="album2">
+        <div class="album2 mt-3">
             <div class="d-flex justify-content-center">
 
                 <h2>Brown Boy Funk</h2>
