changing the mobile magazine

--- a/src/main/resources/templates/music.html
+++ b/src/main/resources/templates/music.html
@@ -98,7 +98,7 @@
             <div class="d-flex justify-content-center">
                 <!-- Trigger/Open The Modal -->
                 <img class="myBtn" th:src="@{/images/dontworrycover.png}" alt="Dont_worry_album_art"
-                     style="width:100%;max-width:300px">
+                     style="width:100%;max-width:300px;max-height:300px">
             </div>
             <!-- The Modal -->
             <div id="myModal" class="modal">
@@ -120,7 +120,7 @@
 
                 <!-- Trigger/Open The Modal -->
                 <img class="myBtn" th:src="@{/images/brownboycover.jpg}" alt="Dont_worry_album_art"
-                     style="width:100%;max-width:300px">
+                     style="width:100%;max-width:300px;max-height:300px">
             </div>
             <!-- The Modal -->
             <div id="myModal2" class="modal">
@@ -141,7 +141,7 @@
 
                 <!-- Trigger/Open The Modal -->
                 <img class="myBtn" th:src="@{/images/durty-dishez-cover.jpg}" alt="Dont_worry_album_art"
-                     style="width:100%;max-width:300px">
+                     style="width:100%;max-width:300px;max-height:300px">
             </div>
             <!-- The Modal -->
             <div id="myModal3" class="modal">
@@ -161,7 +161,7 @@
 
                 <!-- Trigger/Open The Modal -->
                 <img class="myBtn" th:src="@{/images/from-the-back-cover.jpg}" alt="Dont_worry_album_art"
-                     style="width:100%;max-width:300px">
+                     style="width:100%;max-width:300px;max-height:300px">
             </div>
             <!-- The Modal -->
             <div id="myModal4" class="modal">
