--- a/src/main/resources/static/magazine.css
+++ b/src/main/resources/static/magazine.css
@@ -8,6 +8,7 @@ body, html {
     color:#666;
     background-image: url("images/clown-cloud.gif");
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
+    background-position:center;
 }
 
