change icon image on art page

--- a/src/main/resources/templates/music.html
+++ b/src/main/resources/templates/music.html
@@ -46,9 +46,7 @@
     <div class="d-none d-lg-block d-xl-block">
         <div class="navigation-bar navbar-dark bg-dark">
             <div id="navigation-container">
-                <a class="navbar-brand logo" href="/"><img th:src="@{/images/Gacho-icon-White.png}"
-                                                           title="Gacho icon black"
-                                                           width="100px" height="100px"/></a>
+                <a class="navbar-brand" href="/" ><img th:src="@{/images/Gacho-Icon-White.png}" title="Gacho icon black"/></a>
                 <nav class="desktop-nav-links">
                     <ul>
                         <li><a href="art">Art</a></li>
