--- a/src/main/resources/static/magazine.css
+++ b/src/main/resources/static/magazine.css
@@ -1,14 +1,8 @@
-body, html {
-    height: 100%;
-    margin:0;
-    font-size: 16px;
-    font-family: "lato", sans-serif;
-    font-weight: 400;
-    line-height: 1.8em;
-    color:#666;
+body {
     background-image: url("images/clown-cloud.gif");
     background-repeat: no-repeat;
-    background-size: contain;
-    background-position:center;
+    background-position: center center;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
