--- a/src/main/resources/templates/art.html
+++ b/src/main/resources/templates/art.html
@@ -84,8 +84,8 @@
 <!--mobile navbar -->
 <div class="d-block d-sm-block d-md-block d-lg-none">
     <header>
-        <nav class="mobile-navbar navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="/"><img th:src="@{/images/Gacho-Icon-Black.png}" title="Gacho icon black"
+        <nav class="mobile-navbar navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="/"><img th:src="@{/images/Gacho-Icon-White.png}" title="Gacho icon black"
                                                   width="50px" height="50px"/></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -114,8 +114,7 @@
 <div class="d-none d-lg-block d-xl-block">
     <div class="navigation-bar navbar-dark bg-dark">
         <div id="navigation-container">
-            <a class="navbar-brand logo" href="/"><img th:src="@{/images/Gacho-icon-White.png}" title="Gacho icon black"
-                                                       width="100px" height="100px"/></a>
+            <a class="navbar-brand" href="/" ><img th:src="@{/images/Gacho-Icon-White.png}" title="Gacho icon black"/></a>
             <nav class="desktop-nav-links">
                 <ul>
                     <li><a href="shop">$hop</a></li>
