--- a/src/main/resources/templates/magazine.html
+++ b/src/main/resources/templates/magazine.html
@@ -47,8 +47,8 @@
 <!--mobile navbar-->
 <div class="d-block d-sm-block d-md-block d-lg-none">
     <header>
-        <nav class="mobile-navbar navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="/"><img th:src="@{/images/Gacho-Icon-Black.png}" title="Gacho icon black"
+        <nav class="mobile-navbar navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="/"><img th:src="@{/images/Gacho-Icon-White.png}" title="Gacho icon black"
                                                   width="50px" height="50px"/></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
