changing home page logo height

--- a/src/main/resources/static/home-two.css
+++ b/src/main/resources/static/home-two.css
@@ -55,6 +55,11 @@ body, html {
     margin-right: auto;
 }
 
+.desktop-logo{
+    height:100px;
+    width:100px
+}
+
 /*mobile video*/
 
 .zerkVideo-sm {
