--- a/src/main/resources/templates/home-two.html
+++ b/src/main/resources/templates/home-two.html
@@ -84,7 +84,7 @@
     <!--    </nav>-->
     <div class="navigation-bar navbar-dark bg-dark">
         <div id="navigation-container">
-            <a class="navbar-brand" href="/" ><img th:src="@{/images/Gacho-Icon-White.png}" title="Gacho icon black"/></a>
+            <a class="navbar-brand" href="/" ><img class="desktop-logo" th:src="@{/images/Gacho-Icon-White.png}" title="Gacho icon black"/></a>
             <nav class="desktop-nav-links">
                 <ul>
                     <li><a href="art">Art</a></li>
