--- a/src/main/resources/templates/art.html
+++ b/src/main/resources/templates/art.html
@@ -114,7 +114,7 @@
 <div class="d-none d-lg-block d-xl-block">
     <div class="navigation-bar navbar-dark bg-dark">
         <div id="navigation-container">
-            <a class="navbar-brand" href="/" ><img th:src="@{/images/Gacho-Icon-White.png}" title="Gacho icon black"/></a>
+            <a class="navbar-brand" href="/" ><img class="desktop-logo" th:src="@{/images/Gacho-Icon-White.png}" title="Gacho icon black"/></a>
             <nav class="desktop-nav-links">
                 <ul>
                     <li><a href="shop">$hop</a></li>
