--- a/src/main/resources/templates/home-two.html
+++ b/src/main/resources/templates/home-two.html
@@ -104,7 +104,7 @@
 
 <div class="d-none d-lg-block d-xl-block">
     <div class="video-lg d-flex justify-content-center">
-        <video controls autoplay muted loop class="zerkVideo-lg">
+        <video controls autoplay loop class="zerkVideo-lg">
             <source th:src="@{/videos/ZERKTRONIC-DONTWORRY.mp4}" src="/static/videos/ZERKTRONIC-DONTWORRY.mp4"
                     type="video/mp4">
         </video>
