changed the icon

--- a/src/main/resources/templates/magazine.html
+++ b/src/main/resources/templates/magazine.html
@@ -48,7 +48,7 @@
 <div class="d-block d-sm-block d-md-block d-lg-none">
     <header>
         <nav class="mobile-navbar navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="/" ><img class="desktop-logo" th:src="@{/images/Gacho-Icon-White.png}" title="Gacho icon black"/></a>
+            <a class="navbar-brand" href="/"><img th:src="@{/images/Gacho-Icon-White.png}" title="Gacho icon black"/a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -76,8 +76,7 @@
 <div class="d-none d-lg-block d-xl-block">
     <div class="navigation-bar navbar-dark bg-dark">
         <div id="navigation-container">
-            <a class="navbar-brand logo" href="/"><img th:src="@{/images/Gacho-icon-White.png}" title="Gacho icon black"
-                                                       width="100px" height="100px"/></a>
+            <a class="navbar-brand" href="/" ><img class="desktop-logo" th:src="@{/images/Gacho-Icon-White.png}" title="Gacho icon black"/></a>
             <nav class="desktop-nav-links">
                 <ul>
                     <li><a href="art">Art</a></li>
